--- a/simuladoraportesdia.html
+++ b/simuladoraportesdia.html
@@ -99,18 +99,24 @@
     <script>
         async function fetchBitcoinPrices(startDate, endDate) {
             const apiKey = 'CG-ASKzLka6RLoFVaL4kSSnPBzt'; // Substitua pela sua NOVA chave Demo da CoinGecko
-            if (!apiKey || apiKey === '<SUA_CHAVE_API_AQUI>') {
-                throw new Error('Erro: Insira uma chave de API válida da CoinGecko. Acesse https://www.coingecko.com/en/api/pricing para criar uma conta gratuita.');
+            if (!apiKey || apiKey === 'SUA_NOVA_CHAVE_AQUI') {
+                throw new Error('Erro: Insira uma chave de API válida da CoinGecko. Acesse https://www.coingecko.com/en/api/pricing para criar uma conta gratuita e gerar uma nova chave Demo.');
             }
             const url = `https://api.coingecko.com/api/v3/coins/bitcoin/market_chart/range?vs_currency=usd&from=${Math.floor(startDate.getTime() / 1000)}&to=${Math.floor(endDate.getTime() / 1000)}&x_cg_demo_api_key=${apiKey}`;
             const response = await fetch(url);
             if (!response.ok) {
                 if (response.status === 401) {
-                    throw new Error('Erro 401 Unauthorized: Chave de API inválida ou expirada. Gere uma nova no dashboard da CoinGecko.');
+                    throw new Error('Erro 401 Unauthorized: Chave de API inválida ou expirada. Gere uma nova chave Demo no dashboard da CoinGecko[](https://www.coingecko.com/en/api/pricing) e teste com /ping endpoint.');
+                }
+                if (response.status === 429) {
+                    throw new Error('Erro 429 Too Many Requests: Limite de chamadas excedido. Espere 1 minuto e tente novamente.');
                 }
                 throw new Error(`Erro na API CoinGecko: ${response.status} ${response.statusText}. Verifique a chave de API e tente novamente.`);
             }
             const data = await response.json();
+            if (data.error) {
+                throw new Error(`Erro na resposta da API: ${data.error}`);
+            }
             return data.prices.map(([timestamp, price]) => ({
                 date: new Date(timestamp).toISOString().split('T')[0],
                 price
